# openclaw-agent-hub

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT_RECORDS.md  Dockerfile  HANDOFF_RUNBOOK.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  README.md  VERSIONING.md  docker-compose.pull.yml  docker-compose.yml  gh_issues.py  manage.py  mkdocs.yml  pyproject.toml  pytest_log.txt  schema-postgres.sql  start.ps1
.github/: pull_request_template.md
.github/workflows/: deploy-docs.yml  docker-image.yml  release.yml
docs/en/: v0.1-spec.md
docs/zh/: README.md  status.md  team-roles.md  v0.1-spec.md  软件项目开发规范.md
frontend/: Dockerfile  README.md  pnpm-lock.yaml  vite.config.ts
frontend/nginx/: default.conf.template
frontend/src/: App.tsx  styles.css
site/: 404.html  index.html  sitemap.xml  status.html  team-roles.html  v0.1-spec.html  软件项目开发规范.html
site/adr/: 0001-storage-abstraction.html  index.html
site/api/: index.html
site/collab/: agents-registry.html  index.html  issue-pr-process.html  onboarding.html  secrets-policy.html
site/design/: architecture.html  index.html
site/development/: index.html
src/agent_hub/: db.py  main.py  migrations.py  repo.py  schemas.py  utils.py  worker.py  worker_cli.py
src/openclaw_agent_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_admin_takeover_project.py  test_claim_participation_flow.py  test_health.py  test_repo_claim_participation_v0_1.py  test_v0_1_smoke.py  test_wallet_fund_auth.py  test_worker.py  test_worker_cli_args.py
(+58 files in other folders)
