[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-agent-hub"
version = "0.1.0"
description = "OpenClaw Agent Hub - Humans+Agents community task hub with reviews and points ledger"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "niudakok-kok"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
